# atomicals-electrs

./: Cargo.toml  README.md
benches/: atomicals.rs
internal/: config_specification.toml
src/: cache.rs  chain.rs  config.rs  daemon.rs  db.rs  electrum.rs  index.rs  lib.rs  mempool.rs  metrics.rs  p2p.rs  server.rs  signals.rs  tracker.rs  types.rs
src/atomicals/: dft.rs  indexer.rs  metrics.rs  mod.rs  protocol.rs  rpc.rs  state.rs  storage.rs  transaction_log.rs  tx_parser.rs  util.rs  validation.rs  websocket.rs
tests/bench/: block.rs  common.rs  database.rs  memory.rs  mempool.rs  mod.rs  rpc.rs  websocket.rs
tests/common/: mod.rs  test_data.rs  test_utils.rs
tests/integration/: block_tests.rs  mempool_tests.rs  mod.rs  rpc_tests.rs  ws_tests.rs
