[package]
name = "electrs"
version = "0.10.9"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "An efficient re-implementation of Electrum Server in Rust"
license = "MIT"
homepage = "https://github.com/romanz/electrs"
repository = "https://github.com/romanz/electrs"
keywords = ["bitcoin", "electrum", "server", "index", "database"]
documentation = "https://docs.rs/electrs/"
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
build = "build.rs"

[lib]
name = "electrs"
path = "src/lib.rs"

[features]
default = ["metrics"]
metrics = ["prometheus", "tiny_http"]
metrics_process = ["prometheus/process"]

[package.metadata.configure_me]
spec = "internal/config_specification.toml"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bitcoin = { version = "0.32.5", features = ["serde", "rand-std"] }
bitcoin_slices = { version = "0.10.0", features = ["bitcoin", "sha2"] }
bitcoincore-rpc = { version = "0.19.0" }
bytes = "1.0"
chrono = "0.4"
configure_me = "0.4"
crossbeam-channel = "0.5"
dashmap = "5.5"
dirs-next = "2.0"
env_logger = "0.10"
flate2 = "1.0"
hex = "0.4.3"
jsonwebtoken = "8.1.1"
log = "0.4"
num_cpus = "1.13"
parking_lot = "0.12"
prometheus = { version = "0.13", optional = true }
rayon = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.184"
serde_json = "1.0"
signal-hook = "0.3"
stderrlog = "0.5"
tempfile = "3.16"
threadpool = "1.8"
thiserror = "1.0"
time = { version = "0.3.35", features = ["formatting", "macros", "parsing"] }
tiny_http = { version = "0.12", optional = true }
url = "2.2"
warp = "0.3"
tokio-tungstenite = "0.20"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1.44", features = ["full"] }
snap = "1.1"
lz4 = "1.24"
lru = "0.10"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
ctrlc = "=3.4.2"

[target.'cfg(not(windows))'.dependencies]
signal-hook = "0.3"

[dependencies.electrs-rocksdb]
version = "0.19.0-e3"
default-features = false
features = ["zstd", "snappy"]

[build-dependencies]
configure_me_codegen = { version = "0.4.8", default-features = false }

[dev-dependencies]
bitcoin-test-data = "0.2.0"
hex_lit = "0.1.1"
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
tempfile = "3.3"
pretty_assertions = "1.4"

[[bench]]
name = "atomicals"
path = "tests/bench/mod.rs"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
debug = true

[profile.bench]
lto = true
codegen-units = 1
debug = true
